@@ -167,7 +167,11 @@ func TestReceiveEventsAndMetadata(t *testing.T) {
 			if !assert.NoError(t, err) {
 				return
 			}
-			server, err := New(&config, test.splitFunc, to)
+
+			factory := func() (inputsource.NetworkFunc, bufio.SplitFunc, ClientCallback, ClientCallback) {
+				return to, test.splitFunc, nil, nil
+			}
+			server, err := New(&config, factory)
 			if !assert.NoError(t, err) {
 				return
 			}
@@ -217,7 +221,12 @@ func TestReceiveNewEventsConcurrently(t *testing.T) {
 	if !assert.NoError(t, err) {
 		return
 	}
-	server, err := New(&config, bufio.ScanLines, to)
+
+	factory := func() (inputsource.NetworkFunc, bufio.SplitFunc, ClientCallback, ClientCallback) {
+		return to, bufio.ScanLines, nil, nil
+	}
+
+	server, err := New(&config, factory)
 	if !assert.NoError(t, err) {
 		return
 	}
